add flag